--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
         id="text-input"
         placeholder="Enter your English text here..."
       ></textarea>
-      <button id="upload-btn">Insert Text into English</button>
+      <div class="row">
+      <button id="upload-btn">Insert Text into English Table</button>
+      <p>(Will cause trigger to invoke translator Azure Function)</p>
+    </div>
     </div>
 
     <div class="section">
@@ -47,7 +50,6 @@
         <button id="fetch-spanish-btn">Refresh Spanish Table</button>
       </div>
     </div class="section">
-    <button id="clear-tables">Clear Tables</button>
     </div>
     </div>
 
